[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpose-tools"
version = "4.0.8"
description = "Tools for running distributed cellpose for large images"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "cellpose==4.0.8",
    "dask==2025.11.0",
    "distributed==2025.11.0",
    "numpy>2,<3",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "zarr>3,<4",
    "zarr-tools @ git+https://github.com/JaneliaSciComp/zarr-tools.git@fbd294d",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "io_utils",
    "segmentation",
    "tools",
    "utils",
]
