[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpose-tools"
version = "4.0.8"
description = "Tools for running distributed cellpose for large images"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "cellpose==4.0.8",
    "dask==2025.11.0",
    "distributed==2025.11.0",
    "dask-image==2024.5.3",
    "flatten_json==0.1.14",
    "h5py==3.15.1",
    "imagecodecs==2026.1.14",
    "numpy>2,<3",
    "numcodecs==0.16.5",
    "ome-zarr-models==1.3",
    "pydantic==2.12.4",
    "pynrrd==1.1.3",
    "pyyaml==6.0.3",
    "scikit-image>=0.25.2",
    "scikit-learn==1.8.0",
    "tifffile[all]==2025.10.16",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "zarr==3.1.5",
    "zarr-tools @ git+https://github.com/JaneliaSciComp/zarr-tools.git@1bea365",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "io_utils",
    "segmentation",
    "tools",
    "utils",
]
