[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellpose-tools"
version = "4.2.1"
description = "Tools for running distributed cellpose for large images"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.3.0",
    "cellpose==4.2.1.1",
    "dask==2026.6.0",
    "distributed==2026.6.0",
    "dask-image==2026.5.0",
    "flatten_json==0.1.14",
    "numpy>2,<3",
    "pydantic>=2.11.5,<2.13",
    "pyyaml==6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn==1.9.0",
    "tifffile[all]==2026.6.1",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "zarr==3.2.1",
    "zarr-tools @ git+https://github.com/JaneliaSciComp/zarr-tools.git@1ad0a43",
    "dinov3 @ git+https://github.com/facebookresearch/dinov3@346f38f",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "io_utils",
    "segmentation",
    "tools",
    "utils",
]
